package Adapter;

/**
 * @author sun
 * @title: Ballif
 * @projectName software_Design_Pattern_Experiment
 * @description: TODO
 * @version: 1.0
 * @date 2021/4/297:43
 */
public interface Ballif {
    
    double radois = 0;
    Double calculaterArea();
    Double calculateVolume();

    
}
